[package]
name = "easy-map"
version = "0.1.0"
edition = "2021"

[dependencies]
haphazard = { path = "../haphazard/" }
ahash = "0.7.6"

[target.'cfg(loom)'.dependencies]
loom = "0.5.5"

[dev-dependencies]
itertools = "0.10.3"
rand = "0.8.5"
rand_chacha = "0.3.1"

[target.'cfg(not(miri))'.dev-dependencies]
trybuild = { version = "1.0" }
